--- a/confluent_cloud_cost_exporter/config.yml
+++ b/confluent_cloud_cost_exporter/config.yml
@@ -1,31 +1,32 @@
 endpoints: 
   costs: https://api.confluent.cloud/billing/v1/costs
 credentials: 
-  key: <CONFLUENT_API_KEY>
-  secret: <CONFLUENT_API_SECRET>
-cache:
-  expiration: 1200m
-prometheus:
-  modules:
-    default: 
-      metrics:
-        - name: confluent_cloud_cost
-          type: object
-          help: Confluent Cloud Resource costs
-          path: '{.data[*]}'
-          labels:
-            id: '{.resource.id}'
-            resource: '{.resource.display_name}'
-            environment: '{.resource.environment.id}'
-            unit: '{.unit}'
-            product: '{.product}'
-            start: '{.start_date}' 
-            end_date: '{.end_date}' 
-            granularity: '{.granularity}'  
-            discount: '{.discount_amount}'
-            price: '{.price}'
-            original_amount: '{.original_amount}'
-            quantity: '{.quantity}'
-          values:
-            amount: '{.amount}'  
+  key: <CONFLUENT_CLOUD_API_KEY>
+  secret: <CONFLUENT_CLOUD_API_SECRET>
+web:
+  cache:
+    expiration: 240m
+  prometheus:
+    modules:
+      default: 
+        metrics:
+          - name: confluent_cloud_cost
+            type: object
+            help: Confluent Cloud Resource costs
+            path: '{.data[*]}'
+            labels:
+              id: '{.resource.id}'
+              resource: '{.resource.display_name}'
+              environment: '{.resource.environment.id}'
+              unit: '{.unit}'
+              product: '{.product}'
+              start: '{.start_date}' 
+              end_date: '{.end_date}' 
+              granularity: '{.granularity}'  
+              discount: '{.discount_amount}'
+              price: '{.price}'
+              original_amount: '{.original_amount}'
+              quantity: '{.quantity}'
+            values:
+              amount: '{.amount}' 
  
